--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -87,7 +87,6 @@ ul, li{
         top: 50%;
     }
 }
-// SURFING AKTUALNA LOKALIZACJA
 .subtitle__head{
     font-weight: 800;
     font-size: 40px;
@@ -132,5 +131,23 @@ ul, li{
     &:hover{
         box-shadow: 0px 0px 30px $blue;
         padding: 5px 25px;
+    }
+}
+.button{
+    text-transform: uppercase;
+    margin-bottom: 50px;
+    font-size: 20px;
+    line-height: 36px;
+    font-weight: 400;
+    padding: 5px 25px;
+    border: 2px solid $blue;
+    display: inline-block;
+    background: rgba(rgb(33, 97, 216), .50);
+    transition: .4s;
+    &:hover{
+        box-shadow: 0px 0px 30px $blue;
+        padding: 5px 25px;
+        border-right: none;
+        border-left: none;
     }
 }
