fixed  adaptive in header

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -141,7 +141,7 @@
 .menu-btn__line{
     height: 5px;
     width: 50px;
-    background-color: $blue;
+    background-color: rgba(0, 119, 255, 0.589);
     margin-bottom: 10px;
 }
 .header__search{
