--- a/app/scss/_shop.scss
+++ b/app/scss/_shop.scss
@@ -167,3 +167,13 @@
         top: 50%;
     }
 }
+.slider-dots__clic{
+    position: absolute;
+    bottom: 0px;
+    right: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    opacity: .40;
+    font-size: 18px;
+    padding-bottom: 10px;
+}
