--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,7 +9,7 @@ html{
 body{
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
-    background-color: #201208;
+    background-color: rgb(2, 12, 22);
     color: #FFFFFF;
 }
 a{
